--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "atk4/dsql": "^1.2",
-        "php-mime-mail-parser/php-mime-mail-parser": "^5.0"
+        "php-mime-mail-parser/php-mime-mail-parser": "^5.0",
+        "phpmailer/phpmailer": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2"
