--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "atk4/dsql": "^1.2",
         "php-mime-mail-parser/php-mime-mail-parser": "^5.0",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "mmucklo/email-parse": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2"
