updated contact email in composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "authors": [
         {
             "name": "Ken Irwin",
-            "email": "kirwin@wittenberg.edu"
+            "email": "ken@kenirwin.net"
         }
     ]
 }
