--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "atk4/dsql": "^1.2",
         "php-mime-mail-parser/php-mime-mail-parser": "^5.0",
         "phpmailer/phpmailer": "^6.0",
-        "mmucklo/email-parse": "^2.0"
+        "mmucklo/email-parse": "^2.0",
+        "monolog/monolog": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2"
